--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Niranjan Phadtare - Resume</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  
+  <script type="text/JavaScript" src="script.js"></script>
 </head>
 <body>
 
   <div class="resume">
     <!-- LEFT COLUMN -->
     <div class="left">
-      <img src="resume copy.JPG" alt="Niranjan Phadtare" />
+      <img src="resume copy.JPG" alt="Niranjan Phadtare" id="x"
+      onmouseover="setImage()" onmouseout="setOldImage()"/>
+      
       <h1>Niranjan Phadtare</h1><br>
       <p><strong>Phone:</strong><br>+91 8485835711</p>
       <p><strong>Email:</strong><br>niranjanvphadtare701@gmail.com</p>
       <p><strong>LinkedIn:</strong><br><a href="https://www.linkedin.com/in/niranjan-phadtare-018bbb2ba">linkedin.com/in/niranjan-phadtare</a></p>
-
+    <div class="dwn">
+      <a href="Niranjan Phadtare Resume.pdf" download class="btn" id="dwnBtn" onmouseover="newBtn()"
+      onmouseout="oldBtn()">Download resume</a>
+    </div>
       <div class="left-section_1">
         <h2>Career Objective</h2>
         <p>
